@@ -38,6 +38,9 @@ package org.fenixedu.academictreasury.dto.reports;
 import static org.fenixedu.academictreasury.util.AcademicTreasuryConstants.academicTreasuryBundle;
 
 import java.math.BigDecimal;
+import java.util.Collections;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.poi.ss.usermodel.Row;
 import org.fenixedu.academic.domain.Person;
@@ -59,6 +62,7 @@ import org.fenixedu.treasury.domain.document.InvoiceEntry;
 import org.fenixedu.treasury.domain.document.SettlementEntry;
 import org.fenixedu.treasury.domain.document.SettlementNote;
 import org.fenixedu.treasury.domain.event.TreasuryEvent;
+import org.fenixedu.treasury.domain.exemption.TreasuryExemption;
 import org.fenixedu.treasury.domain.paymentcodes.SibsPaymentRequest;
 import org.fenixedu.treasury.domain.payments.PaymentTransaction;
 import org.fenixedu.treasury.services.integration.ITreasuryPlatformDependentServices;
@@ -592,6 +596,29 @@ public class SettlementReportEntryBean implements SpreadsheetRow {
         PersonCustomer personCustomer = (PersonCustomer) this.settlementEntry.getDebtAccount().getCustomer();
 
         return personCustomer.getAssociatedPerson();
+    }
+
+    // ANIL 2024-05-02
+    //
+    // This is a workaround I found to present the same information but in 
+    // different columns, in the report
+    public Set<TreasuryExemption> getTreasuryExemptionsSetToPresentCode() {
+        if (getAssociatedDebitEntry() != null) {
+            return getAssociatedDebitEntry().getTreasuryExemptionsSet();
+        } else if (getAssociatedCreditEntry() != null) {
+            return getAssociatedCreditEntry().getCreditTreasuryExemptionsSet().stream().map(cte -> cte.getTreasuryExemption())
+                    .collect(Collectors.toSet());
+        }
+
+        return Collections.emptySet();
+    }
+
+    // ANIL 2024-05-02
+    //
+    // This is a workaround I found to present the same information but in 
+    // different columns, in the report
+    public Set<TreasuryExemption> getTreasuryExemptionsSetToPresentName() {
+        return getTreasuryExemptionsSetToPresentCode();
     }
 
     // @formatter:off
